demo-hybrid-app/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hybrid-app-demo
  labels:
    name: hybrid-app-demo
    app.kubernetes.io/part-of: hybrid-app
